<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="48.0dp" android:layout_marginBottom="48.0dp" android:overScrollMode="ifContentScrolls"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textColor="?textColorSecondary" android:id="@id/pin_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" android:text="@string/restr_pin_create_pin" style="?textAppearanceMedium" />
        <EditText android:textColor="?textColorPrimary" android:id="@id/pin_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:hint="@string/restr_pin_enter_old_pin" android:inputType="numberPassword" style="?textAppearanceMedium" />
        <EditText android:textColor="?textColorPrimary" android:id="@id/pin_new_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:hint="@string/restr_pin_enter_new_pin" android:inputType="numberPassword" style="?textAppearanceMedium" />
        <EditText android:textColor="?textColorPrimary" android:id="@id/pin_confirm_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:hint="@string/restr_pin_confirm_pin" android:inputType="numberPassword" style="?textAppearanceMedium" />
        <TextView android:textColor="#ffff0000" android:id="@id/pin_error_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:text="@string/restr_pin_error_doesnt_match" style="?textAppearanceSmall" />
    </LinearLayout>
</ScrollView>
